@@ -52,6 +52,7 @@ protected:
 	afx_msg void OnBnClickedOnlyexplorer();
 	afx_msg void OnLvnItemchangedMenulist(NMHDR *pNMHDR, LRESULT *pResult);
 	afx_msg void OnBnClickedSimplecontext();
+	afx_msg void OnBnClickedOwnerdrawn();
 
 	DECLARE_MESSAGE_MAP()
 public:
@@ -71,4 +72,7 @@ private:
 	
 	CRegDWORD		m_regSimpleContext;
 	BOOL			m_bSimpleContext;
+	
+	CRegDWORD		m_regOwnerDrawn;
+	int				m_OwnerDrawn;
 };
